--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^2.2.10",
     "mongoose": "^4.6.5",
     "morgan": "~1.7.0",
+    "promise": "^7.1.1",
     "serve-favicon": "^2.3.0"
   }
 }
