--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "~3.1.0",
     "@angular/upgrade": "~2.1.0",
     "angular-in-memory-web-api": "~0.1.5",
+    "angular2-google-maps": "^0.15.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
@@ -37,6 +38,6 @@
     "concurrently": "^3.0.0",
     "lite-server": "^2.2.2",
     "typescript": "^2.0.3",
-    "typings":"^1.4.0"
+    "typings": "^1.4.0"
   }
 }
