--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.1",
     "crypto": "0.0.3",
-    "debug": "~2.2.0",
+    "debug": ">2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.13.4",
     "express-session": "^1.14.1",
