--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,7 @@
     "@angular/upgrade": "~2.1.0",
     "angular-in-memory-web-api": "~0.1.5",
     "angular2-google-maps": "^0.15.0",
-    "bootstrap": ">=4.1.2"
+    "bootstrap": ">=4.1.2",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
